--- a/.github/workflows/react-build.yml
+++ b/.github/workflows/react-build.yml
@@ -34,10 +34,10 @@ jobs:
       - run: 'chmod 400 ~/.ssh/id_deploy_machine'
       - run: 'echo -e "Host deploy-machine\n\tUser $SSH_USER\n\tHostName $SSH_HOST\n\tIdentityFile ~/.ssh/id_deploy_machine\n\tStrictHostKeyChecking No" >> ~/.ssh/config'
       - name: Enter maintainance mode on the server
-        run: 'ssh deploy-machine "~/setMaintainance.sh -t"'
+        run: 'ssh deploy-machine "~/setMaintainanceEvine.sh -t"'
       - name: Copy the build to the server
         run: 'rsync -a ${{ github.workspace }}/build deploy-machine:~/evine/evine-webclient'
       - name: Restart Nginx
         run: 'ssh deploy-machine "sudo systemctl restart nginx"'
       - name: Exit maintainance mode
-        run: 'ssh deploy-machine "~/setMaintainance.sh -f"'
+        run: 'ssh deploy-machine "~/setMaintainanceEvine.sh -f"'
