--- a/.github/workflows/react-build.yml
+++ b/.github/workflows/react-build.yml
@@ -15,19 +15,19 @@ jobs:
       SSH_HOST: ${{ secrets.SSH_HOST }}
       SSH_USER: ${{ secrets.SSH_USER }}
     steps:
-      - name: Pull the repo
-        uses: actions/checkout@v2
-        with:
-          ref: 'deployed'
-      - name: Use Node.js v16
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm install
-      - name: Build the React app
-        run: CI= npm run build
+      # - name: Pull the repo
+      #   uses: actions/checkout@v2
+      #   with:
+      #     ref: 'deployed'
+      # - name: Use Node.js v16
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '16'
+      #     cache: 'npm'
+      # - name: Install dependencies
+      #   run: npm install
+      # - name: Build the React app
+      #   run: CI= npm run build
       - name: Prepare to SSH into the VPS
         run: mkdir ~/.ssh
       - run: 'echo "$SSH_KEY" >> ~/.ssh/id_deploy_machine'
@@ -35,8 +35,10 @@ jobs:
       - run: 'echo -e "Host deploy-machine\n\tUser $SSH_USER\n\tHostName $SSH_HOST\n\tIdentityFile ~/.ssh/id_deploy_machine\n\tStrictHostKeyChecking No" >> ~/.ssh/config'
       - name: Enter maintainance mode on the server
         run: 'ssh deploy-machine "~/setMaintainanceEvine.sh -t"'
-      - name: Copy the build to the server
-        run: 'rsync -a ${{ github.workspace }}/build deploy-machine:~/evine/evine-webclient'
+      # - name: Copy the build to the server
+      #   run: 'rsync -a ${{ github.workspace }}/build deploy-machine:~/evine/evine-webclient'
+      - name: Pulling latest changes from the deployed branches
+        run: 'ssh deploy-machine "~/updateWebclientEvine.sh"'
       - name: Restart Nginx
         run: 'ssh deploy-machine "sudo systemctl restart nginx"'
       - name: Exit maintainance mode
