--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "Evine",
-  "name": "Evine Realtors",
+  "short_name": "Madhoor Group",
+  "name": "Madhoor Group",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png?v=2.0",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png?v=2.0",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
